--- a/src/json/projects.json
+++ b/src/json/projects.json
@@ -1,5 +1,5 @@
 {
-  "proyects": [
+  "projects": [
     {
       "name": "Pineapple-Pizza",
       "description": "Un sencillo juego de puzzles con temática entorno al meme de la pizza con piña.",
